data/collection/fixes/descriptions/scala/scala-7667
The following code can be compiled with no errors by 2.10.0

```java
Welcome to Scala version 2.10.0 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_32).
Type in expressions to have them evaluated.
Type :help for more information.

scala>   def packAny(value: Any) {
     |     value match {
     |       case x: collection.GenMapLike[_,_,_]  =>
     |         for((k,v) <- x) { ??? }
     |     }
     |   }
packAny: (value: Any)Unit
```

But cannot be compiled by 2.10.1 and 2.10.2

```java
Welcome to Scala version 2.10.1 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_32).
Type in expressions to have them evaluated.
Type :help for more information.

scala>   def packAny(value: Any) {
     |     value match {
     |       case x: collection.GenMapLike[_,_,_]  =>
     |         for((k,v) <- x) { ??? }
     |     }
     |   }
<console>:10: error: value foreach is not a member of _
               for((k,v) <- x) { ??? }
                            ^
```